# docs/swagger.yaml
@@ -167,6 +167,35 @@ definitions:
     - email
     - password
     type: object
+  models.Review:
+    properties:
+      comment:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+      product_id:
+        type: integer
+      rating:
+        type: integer
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  models.ReviewRequest:
+    properties:
+      comment:
+        type: string
+      rating:
+        maximum: 5
+        minimum: 1
+        type: integer
+    required:
+    - comment
+    - rating
+    type: object
   models.UpdateCartReq:
     properties:
       id:
@@ -849,6 +878,78 @@ paths:
       summary: Get product by ID
       tags:
       - products
+  /products/{id}/reviews:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves all reviews for a specific product by ID
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Returns list of product reviews
+          schema:
+            allOf:
+            - $ref: '#/definitions/responsehandler.SuccessResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Review'
+                  type: array
+              type: object
+        "400":
+          description: Invalid request, missing or invalid product ID
+          schema:
+            $ref: '#/definitions/responsehandler.ErrorHandler'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/responsehandler.ErrorHandler'
+      summary: Get product reviews
+      tags:
+      - reviews
+    post:
+      consumes:
+      - application/json
+      description: Creates a new review for a specific product
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Review Information
+        in: body
+        name: review
+        required: true
+        schema:
+          $ref: '#/definitions/models.ReviewRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Review added successfully
+          schema:
+            $ref: '#/definitions/responsehandler.SuccessResponse'
+        "400":
+          description: Invalid input, parameter or validation error
+          schema:
+            $ref: '#/definitions/responsehandler.ErrorHandler'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/responsehandler.ErrorHandler'
+      security:
+      - BearerAuth: []
+      summary: Add a review for a product
+      tags:
+      - reviews
   /put-image:
     post:
       consumes:
