# internal/controllers/product_controller.go
@@ -110,58 +110,3 @@ func AddProduct(e echo.Context) error {
 	return e.JSON(http.StatusCreated, responsehandler.SuccessMessage("product added successfully"))
 
 }
-
-func AddReview(e echo.Context) error {
-	var reviewReq models.ReviewRequest
-	productIDParams := e.Param("id")
-	if productIDParams == "" {
-		return e.JSON(http.StatusBadRequest, responsehandler.NewErrorHandler("product id is required"))
-	}
-	productID, err := strconv.Atoi(productIDParams)
-	if err != nil {
-		return e.JSON(http.StatusBadRequest, responsehandler.NewErrorHandler("invalid product id"))
-	}
-
-	if err := e.Bind(&reviewReq); err != nil {
-		return e.JSON(http.StatusBadRequest, responsehandler.NewErrorHandler("invalid input request"))
-	}
-	if err := e.Validate(&reviewReq); err != nil {
-		return e.JSON(http.StatusBadRequest, responsehandler.NewErrorHandler("required fields are missing"))
-	}
-	db := db.DB()
-
-	user := e.Get("user").(models.User)
-
-	review := models.Review{
-		UserID:    user.ID,
-		ProductID: productID,
-		Rating:    reviewReq.Rating,
-		Comment:   reviewReq.Comment,
-		CreatedAt: time.Now().UTC(),
-		UpdatedAt: time.Now().UTC(),
-	}
-
-	if err := db.AddReview(review); err != nil {
-		return e.JSON(http.StatusInternalServerError, responsehandler.NewErrorHandler(err.Error()))
-	}
-
-	return e.JSON(http.StatusCreated, responsehandler.SuccessMessage("product review added successfully"))
-
-}
-
-func GetReviews(e echo.Context) error {
-	productIDParams := e.Param("id")
-	if productIDParams == "" {
-		return e.JSON(http.StatusBadRequest, responsehandler.NewErrorHandler("product id is required"))
-	}
-	productID, err := strconv.Atoi(productIDParams)
-	if err != nil {
-		return e.JSON(http.StatusBadRequest, responsehandler.NewErrorHandler("invalid product id"))
-	}
-	db := db.DB()
-	res, err := db.GetProductReviews(productID)
-	if err != nil {
-		return e.JSON(http.StatusBadRequest, responsehandler.NewErrorHandler(err.Error()))
-	}
-	return e.JSON(http.StatusBadRequest, responsehandler.SuccessWithData(res, ""))
-}
